// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile vue > compileApis 1`] = `
[
  {
    "path": "src/apis/chuangjianyonghu.ts",
    "token": "import axios from\\"axios\\";export function chuangjianyonghu(data){return axios({method:\\"post\\",url:\\"chuangjianyonghu\\",data:data})}",
  },
  {
    "path": "src/apis/chuangjianbanji.ts",
    "token": "import axios from\\"axios\\";export function chuangjianbanji(data){return axios({method:\\"post\\",url:\\"chuangjianbanji\\",data:data})}",
  },
  {
    "path": "src/apis/luruxueshengbanji.ts",
    "token": "import axios from\\"axios\\";export function luruxueshengbanji(data){return axios({method:\\"post\\",url:\\"luruxueshengbanji\\",data:data})}",
  },
  {
    "path": "src/apis/chaxunxueshengbanji.ts",
    "token": "import axios from\\"axios\\";export function chaxunxueshengbanji(data){return axios({method:\\"post\\",url:\\"chaxunxueshengbanji\\",data:data})}",
  },
  {
    "path": "src/apis/chaxunsuoyouyonghu.ts",
    "token": "import axios from\\"axios\\";export function chaxunsuoyouyonghu(data){return axios({method:\\"post\\",url:\\"chaxunsuoyouyonghu\\",data:data})}",
  },
  {
    "path": "src/apis/chaxunyonghu.ts",
    "token": "import axios from\\"axios\\";export function chaxunyonghu(data){return axios({method:\\"post\\",url:\\"chaxunyonghu\\",data:data})}",
  },
  {
    "path": "src/apis/chaxunyonghu.ts",
    "token": "import axios from \\"axios\\";
export function chaxunyonghu(data) {
  return axios({
    method: \\"post\\",
    url: \\"chaxunyonghu\\",
    data: data
  });
}",
  },
]
`;

exports[`compile vue > compileApis 2`] = `
[
  {
    "path": "src/utils/axios.ts",
    "token": "import axios from\\"axios\\";const instance=axios.create({timeout:6000,baseURL:\\"\\",headers:{}});instance.interceptors.request.use(function(config){return config},function(error){return error.reject(error)});instance.interceptors.response.use(function(response){return response.data},function(error){return error.reject(error)});export default instance;",
  },
]
`;

exports[`compile vue > compileRequestInstance 1`] = `
{
  "tokens": [
    {
      "path": "src/utils/axios.ts",
      "token": "import axios from\\"axios\\";const instance=axios.create({timeout:6000,baseURL:\\"\\",headers:{}});instance.interceptors.request.use(function(config){return config},function(error){return error.reject(error)});instance.interceptors.response.use(function(response){return response.data},function(error){return error.reject(error)});export default instance;",
    },
  ],
}
`;

exports[`compile vue > compileRouter 1`] = `
[
  {
    "path": "src/router/routes.ts",
    "token": "import { RouteRecordRaw } from \\"vue-router\\";
const routes = [{
  path: \\"/shouye\\",
  name: \\"shouye\\",
  component: () => import(\\"../pages/shouye.vue\\")
}, {
  path: \\"/404\\",
  name: \\"404\\",
  component: () => import(\\"../pages/404.vue\\")
}, {
  path: \\"/502\\",
  name: \\"502\\",
  component: () => import(\\"../pages/502.vue\\")
}, {
  path: \\"/renyuan/renyuanluruye\\",
  name: \\"renyuanluruye\\",
  component: () => import(\\"../pages/renyuan/renyuanluruye.vue\\")
}, {
  path: \\"/renyuan/renyuanliebiao\\",
  name: \\"renyuanliebiao\\",
  component: () => import(\\"../pages/renyuan/renyuanliebiao.vue\\")
}, {
  path: \\"/renyuan/renyuanxiangqingye\\",
  name: \\"renyuanxiangqingye\\",
  component: () => import(\\"../pages/renyuan/renyuanxiangqingye.vue\\")
}];
export { routes };",
  },
]
`;
